# orca

./: .gitignore  .railwayignore  README.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  railway.toml  render.yaml  turbo.json
.github/workflows/: ci.yml  docker-build.yml  fly-deploy.yml
apps/web/: package.json  pnpm-lock.yaml
backend/: Dockerfile  cloud_config.py  config.py  kernel_manager.py  kernel_manager_instance.py  machine_forwarder.py  main.py  models.py  railway-start.sh  railway.dockerfile  requirements.txt  session_registry.py  test_backend.py
backend/routers/: __init__.py  execute.py  sessions.py
backend/services/: container_manager.py  executor.py  file_storage.py
docker/executor/: Dockerfile  start_kernel.sh
markdown/: DOCKER_IMAGE_DEPLOY.md  RAILWAY_IMAGE_SETUP.md  RAILWAY_QUICK_START.md  RAILWAY_SETUP.md  README.md  WHAT_IS_RAILWAY.md
services/control/: k8s_manager.py  kernel_manager.py  main.py  pyproject.toml
